# hi-chat

./: .gitignore  Makefile  README.md  pyproject.toml
app/: crud.py  database.py  main.py  models.py  routes.py  schemas.py
backend/: pyproject.toml
backend/app/: ai.py  crud.py  main.py  models.py  routes.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_03_28_2031-57dd2a457937_added_model_column_in_message.py  2026_03_29_1016-f8528c1a48c7_added_updated_at_in_chat_model.py
backend/tests/: conftest.py  test_ai.py  test_crud_bot.py  test_user.py
docs/: hydration_mismatch.md  migration_issues_faced.md
frontend/: components.json  package.json  pnpm-lock.yaml
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: chat-item.tsx  chat-sidebar.tsx  conversation-history.tsx  convo.tsx  model-provider.tsx  new-chat.tsx  not-found.tsx  prompt-input-box.tsx  theme-provider.tsx
frontend/src/components/ai-elements/: attachments.tsx  conversation.tsx  message.tsx  model-selector.tsx  prompt-input.tsx
frontend/src/components/ui/: button-group.tsx  button.tsx  command.tsx  input-group.tsx  select.tsx  sidebar.tsx
frontend/src/lib/: models.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/chats/: $chatId.tsx
migrations/: env.py
migrations/versions/: 2026_03_28_1244-10fd31fb3198_initial_migration.py
tests/: test_main.py
