[project]
name = "hi-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pydantic-ai-slim[openrouter]>=1.73.0",
    "ruff>=0.15.8",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-libsql>=0.2.0",
]
